1- Kafamdaki taslak yapı genel olarak oturdu, 1-2 konu var onlara sonra bakacağım...

--- a/MaSoft.MaPos.Windows/MaSoft.MaPos.Windows.csproj
+++ b/MaSoft.MaPos.Windows/MaSoft.MaPos.Windows.csproj
@@ -44,6 +44,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Update="UserControls\mainTableControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
