--- a/MaSoft.MaPos.Windows/App.config
+++ b/MaSoft.MaPos.Windows/App.config
@@ -8,10 +8,10 @@
     </configSections>
 
 	<appSettings>
-		<add key="HostIp" value="svn.ferruhkoroglu.com" />
+		<add key="HostIp" value="..." />
 		<add key="UserName" value="sa" />
-		<add key="DbPassword" value="master" />
-		<add key="Db" value="MaPos" />
+		<add key="DbPassword" value="sa" />
+		<add key="Db" value="..." />
 	</appSettings>
 
 	<applicationSettings>
